<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circles-Squares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings">SETTINGS</string>
    <string name="volume">Volume</string>
    <string name="tutorial">Tutorial</string>
    <string name="ccolor">Colouring</string>
    <string name="aboutus">About Us</string>
    <string name="back">Back</string>
    <string name="appname">chowkhunda</string>

</resources>
